--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output:
 
 ## Some Thoughts & Maybe Some Code `r emo::ji("woman_technologist")`
 
-A place for some thoughts related to learning & teaching [R](https://www.r-project.org/) & the [R Ecosystem](http://fg2re.sellorm.com/).
+A place for some thoughts, mostly related to learning & teaching [R](https://www.r-project.org/) & the [R Ecosystem](http://fg2re.sellorm.com/)---but also some other stuff as well.
 
 
 
