early draft text

--- a/R/bc-sd61-popn/sd61_kids.Rmd
+++ b/R/bc-sd61-popn/sd61_kids.Rmd
@@ -15,14 +15,22 @@ knitr::opts_chunk$set(echo = TRUE, fig.height = 6,
                       warning = FALSE, message = FALSE,
                       cache = TRUE)
 
-library(cansim) #get StatsCan data
-library(dplyr) #data munging
-library(ggplot2) #plotting
-library(gghighlight)
+
 ```
 
 
-## Kids
+## The Kids Are Coming
+
+We are in the campaign period for the British Columbia [2018 General Local Elections](https://elections.bc.ca/political-participants/local-elections-campaign-financing/2018-general-local-elections/). The recent weeks have brought many conversations with candidates running for various posts&mdash;mostly for Councillor or School Board Trustee. I have enjoyed talking with candidates about what issues motivated them to step into such important roles&mdash;the housing crisis, responsible developement, climate change mitigation & adaptation. OK, ok, nobody mentioned the climate change part, but I wish they had. 
+
+I have lived in the Township of Esquimalt for the past 2+ years `r emo::ji("house")`. It is an amazing community&mdash;but there is always room to improve, even on amazing. I have had a fair bit to say about what is on my mind in Esquimalt, such as reducing speed limits in neighbourhood areas `r emo::ji("car")`, more and safer bike paths for family cycling `r emo::ji("bike")`, providing low income housing `r emo::ji("house")`, and, _schools_. Specifically, space in our only catchment elementary school&mdash;L'Ecole Macaulay Elementary.  
+
+Esquimalt used to have 2 catchment elementary schools, Lampson Street & Macaulay (L'Ecole Victor Brodeur is also in Esquimalt, with enrolment reserved for francophone families). Lampson, a school with [an impressive history in the region](https://victoriadailyphoto.blogspot.com/2013/05/lampson-street-school.html), was closed as a catchment elementary school in 2007 due to declining enrolment. However, things have and are changing, and _fast_. 
+
+Due to the recent, legal change to [revert class size & composition back to 2002 levels](https://bctf.ca/IssuesInEducation.aspx?id=5530), as well as a growing population&mdash;Macaulay has added one or more new classes in each of the 3 years I have had kids in the school, as have many elementary schools throughout the Capital Regional District. So I have been talking `r emo::ji("speaking_head")` to candidates about how Macaulay is _full_ and what is next? 
+
+I thought it would be interesting to support my talk `r emo::ji("speaking_head")` with some _data_. Also, I am always keen to work on my R programming skills `r emo::ji("woman_technologist")`. So here it goes.
+
 
 ```{r}
 
@@ -32,4 +40,10 @@ library(gghighlight)
 ```{r}
 
 ```
+
+#### Yep, The Kids Are Coming
+
+The kid population estimate lines are going up and are predicted to continue to do so for many years to come `r emo::ji("chart_with_upwards_trend")`. In my opinion, this is an issue that should be high on the watch ` r emo::ji("eyes")` list for the Township of Esquimalt. The elementary school space crunch has aleady had community impacts throughout the Capital Regional District, displacing dedicated computer labs, after-school care situations, pre-schools. While the School District has launched the [Catchment Boundary Review](https://www.sd61.bc.ca/news-events/community/catchmentboundaryreview/)&mdash;a great step&mdash;I think it would useful for Esquimalt to start the necessary conversations, calculations and considerations around bringing a second catchment elementary school (back) on line for Esquimalt kids `r emo::ji("school")`.
+
+`r Sys.Date()`
 
